# pipnnsearch

./: CMakeLists.txt  README.md  test_xgnnd.cpp  xgnnd.h  xgnnd_search.cu  xgnnd_search.cuh
utils/: timer.h  utils.h
